--- a/Framework/sass/globals/_body.sass
+++ b/Framework/sass/globals/_body.sass
@@ -17,7 +17,7 @@ body
 	font-family: $base-font-family
 	color: $global-font-color
 	background: $global-background-color
-  overflow-x: hidden
+  overflow-x: hidden !important
 
 a:link,
 a:visited,
